--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,3 @@
-@import "./styles.scss";
 @import 'node_modules/@sparkdesignsystem/spark-styles/spark';
+@import './scss/fonts.scss';
+@import './scss/styles.scss';
